--- a/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/MethodTemplate.cshtml
@@ -112,13 +112,13 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
     result = @(Model.OperationResponseReturnTypeString).new(connection, http_response)
     @Model.InitializeResponseBody
 
-    @foreach (var responsePair in Model.Responses.Where(r => r.Value != null && r.Value.IsSerializable()))
+    @foreach (var responsePair in Model.Responses.Where(r => r.Value != null && r.Value.Item1 != null && r.Value.Item1.IsSerializable()))
     {
     <text>
     # Deserialize Response
     if status_code == @Model.GetStatusCodeReference(responsePair.Key)
       begin
-        @(Model.CreateDeserializationString("response_content", responsePair.Value, "result.body"))
+        @(Model.CreateDeserializationString("response_content", responsePair.Value.Item1, "result.body"))
       rescue Exception => e
         fail MsRest::DeserializationError.new("Error occured in deserializing the response", e.message, e.backtrace, response_content)
       end
@@ -126,11 +126,11 @@ def @(Model.Name)(@(Model.MethodParameterDeclaration))
     </text>
     }
 
-    @if (Model.ReturnType != null && Model.DefaultResponse != null && !Model.Responses.Any() && Model.DefaultResponse.IsSerializable())
+    @if (Model.ReturnType != null && Model.DefaultResponse != null && Model.DefaultResponse.Item1 != null && !Model.Responses.Any() && Model.DefaultResponse.Item1.IsSerializable())
     {
     <text>
     begin
-      @(Model.CreateDeserializationString("response_content", Model.ReturnType, "result.body"))
+      @(Model.CreateDeserializationString("response_content", Model.ReturnType.Item1, "result.body"))
     rescue Exception => e
       fail MsRest::DeserializationError.new("Error occured in deserializing the response", e.message, e.backtrace, response_content)
     end
