--- a/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureModelIndexTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureModelIndexTemplate.cshtml
@@ -15,8 +15,7 @@
 @EmptyLine
 var msRestAzure = require('ms-rest-azure');
 @EmptyLine
-exports.Resource = msRestAzure.Resource;
-exports.SubResource = msRestAzure.SubResource;
+exports.BaseResource = msRestAzure.BaseResource;
 exports.CloudError = msRestAzure.CloudError;
 @foreach (var model in Model.ModelTemplateModels)
 {
