--- a/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureModelIndexTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/Azure.NodeJS/Templates/AzureModelIndexTemplate.cshtml
@@ -17,7 +17,7 @@ var msRestAzure = require('ms-rest-azure');
 @EmptyLine
 exports.BaseResource = msRestAzure.BaseResource;
 exports.CloudError = msRestAzure.CloudError;
-@foreach (var model in Model.ModelTemplateModels)
+@foreach (var model in Model.OrderedModelTemplateModels)
 {
 @:exports.@model.Name = require('./@model.Name.ToCamelCase()');
 }
