--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ModelIndexTemplateTS.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ModelIndexTemplateTS.cshtml
@@ -7,7 +7,7 @@
 @Header(" * ")
  */
 @EmptyLine
-@foreach (var model in Model.ModelTemplateModels) {
+@foreach (var model in Model.OrderedModelTemplateModels) {
 @EmptyLine
 @:@(Include(new ModelTemplateTS(), model))
 }
