--- a/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodTemplate.cshtml
@@ -6,7 +6,7 @@
 @using Microsoft.Rest.Generator.Python.TemplateModels
 @using Microsoft.Rest.Generator.Python.Templates
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Python.MethodTemplateModel>
-    def @(Model.Name.ToPythonCase())(self, @(Model.MethodParameterDeclaration)):
+    def @(Model.Name.ToPythonCase())(self, @(Model.MethodParameterDeclaration(true))):
         """
 @if (!String.IsNullOrEmpty(Model.Summary))
 {
@@ -32,27 +32,45 @@
         try:
     @*if (Model.IsAbsoluteUrl) *@
             # Construct URL
-            url = self._url('pools', pool_name, 'evaluateautoscale')
+@if (Model.IsAbsoluteUrl)
+{
+@:            url = '@(Model.Url)'
+}
+else
+{
+@:            url = @(Model.ClientReference).baseUri + '@(Model.Url)'
+}
+            @(Model.BuildUrlPath("url"))
 @EmptyLine
             # Construct parameters
             query = {}
-            query['api-version'] = self._config.api_version
-            query['timeout'] = self._config.request_timeout
+            @(Model.BuildUrlQuery("query"))
 @EmptyLine
             # Construct headers
             headers = {}
-@*custom header*@
-            headers['ocp-date'] = Serialized.serialize_opc_date(datetime.utcnow())
-            headers.update(access.get_headers())
+            @(Model.BuildHeaders("query"))
+            if customHeaders is not None:
+                headers.update(customHeaders)
             headers['Content-Type'] = '@(Model.ContentType)'
+@* Add Credentials *@
 @EmptyLine
-            # Construct body
-            content = Serialized(evaluation_parameters)
+@if (Model.RequestBody != null)
+{
+@:            # Construct body
+@:            content = Serialized(@Model.RequestBody.Name)
 @EmptyLine
+}
 @*stream handler*@
             # Construct and send request
             request = self._client.@(Model.GetHttpFunction(Model.HttpMethod))(url, query)
-            response = self._send(request, headers, content)
+@if (Model.RequestBody != null)
+{
+@:            response = self._send(request, headers, content)
+}
+else
+{
+@:            response = self._send(request, headers)
+}
 @EmptyLine
             if response.status_code not in [@Model.GetAcceptStatus()]:
 @EmptyLine
