--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientInterfaceTemplate.cshtml
@@ -89,7 +89,7 @@ if(!property.IsReadOnly)
     {
     @: * @@param @param.Name @((param.Documentation ?? "the " + param.Type.ToString() + " value").EscapeXmlComment())
     }
-    if (method.ReturnType != null)
+    if (method.ReturnType.Body != null)
     {
     @: * @@return the @method.ReturnTypeString.EscapeXmlComment() object if successful.
     }
