--- a/AutoRest/Generators/Java/Java/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/MethodTemplate.cshtml
@@ -18,7 +18,7 @@
 {
 @: * @@param @param.Name @((param.Documentation ?? "the " + param.Type.ToString() + " value").EscapeXmlComment())
 }
-@if (Model.ReturnType != null)
+@if (Model.ReturnType.Body != null)
 {
 @: * @@return the @Model.ReturnTypeString.EscapeXmlComment() object if successful.
 }
@@ -75,7 +75,7 @@ public Call<@Model.CallType> @(Model.Name)Async(@Model.MethodParameterDeclaratio
 @:    Validator.validate(@(param.Name), serviceCallback);
 }
     Call<@Model.CallType> call = service.@(Model.Name)(@Model.MethodParameterInvocation);
-    call.enqueue(new @Model.InternalCallback<@(JavaCodeNamer.WrapPrimitiveType(Model.ReturnType.Item1).Name)>(serviceCallback) {
+    call.enqueue(new @Model.InternalCallback<@(JavaCodeNamer.WrapPrimitiveType(Model.ReturnType.Body).Name)>(serviceCallback) {
         @@Override
         public void onResponse(Response<@Model.CallType> response, Retrofit retrofit) {
             try {
@@ -92,11 +92,11 @@ private ServiceResponse<@Model.GenericReturnTypeString> @(Model.Name)Delegate(Re
     return new ServiceResponseBuilder<@Model.GenericReturnTypeString>()
 @foreach (var response in Model.Responses)
 {
-            @:.register(@((int)response.Key), new TypeToken<@JavaCodeNamer.WrapPrimitiveType(response.Value.Item1).Name>(){}.getType())
+            @:.register(@((int)response.Key), new TypeToken<@JavaCodeNamer.WrapPrimitiveType(response.Value.Body).Name>(){}.getType())
 }
-@if (Model.DefaultResponse != null)
+@if (Model.DefaultResponse.Body != null)
 {
-            @:.registerError(new TypeToken<@(JavaCodeNamer.WrapPrimitiveType(Model.DefaultResponse.Item1).Name)>(){}.getType())
+            @:.registerError(new TypeToken<@(JavaCodeNamer.WrapPrimitiveType(Model.DefaultResponse.Body).Name)>(){}.getType())
 }
 @if (Model.CallType == "Void")
 {
