[delivers #106697448] Support default values for client properties

--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientTemplate.cshtml
@@ -124,6 +124,11 @@ if(!property.IsReadOnly)
 @:            this.credentials.applyCredentialsFilter(this.client);
 @:        }
     }
+    
+@foreach (var property in Model.Properties.Where(p => p.DefaultValue != null))
+{
+        @:this.@(property.Name) = @(property.DefaultValue);
+}
 
         this.azureClient = new AzureClient(client, retrofitBuilder);
         this.azureClient.setCredentials(this.credentials);
