Fixing polymorphic discriminator in generated Ruby code
Issue: https://github.com/Azure/autorest/issues/456

Previously the discriminator property name was hard-coded to 'dtype'. It
looks like the property used in the tests was mistaken for a convention, so
I renamed it to 'fishtype' to make it obvious that it is specific to the
test data.

--- a/AutoRest/Generators/Ruby/Ruby/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Ruby/Ruby/Templates/ModelTemplate.cshtml
@@ -75,7 +75,7 @@ module @(Settings.Namespace)
         @if (Model.IsPolymorphic)
         {
         @EmptyLine
-        @:output_object['dtype'] = object.dtype
+        @:output_object['@Model.PolymorphicDiscriminatorProperty'] = object.@Model.PolymorphicDiscriminatorProperty
         }
 
         @EmptyLine
@@ -104,7 +104,7 @@ module @(Settings.Namespace)
         @if (Model.IsPolymorphic)
         {
         @EmptyLine
-        @:output_object.dtype = object['dtype']
+        @:output_object.@Model.PolymorphicDiscriminatorProperty = object['@Model.PolymorphicDiscriminatorProperty']
         }
 
         @EmptyLine
@@ -118,10 +118,10 @@ module @(Settings.Namespace)
       {
       @EmptyLine
       @:def initialize
-      @:  @@dtype = "@Model.Name.ToLower()"
+      @:  @@@Model.PolymorphicDiscriminatorProperty = "@Model.Name.ToLower()"
       @:end
       @EmptyLine
-      @:attr_accessor :dtype
+      @:attr_accessor :@Model.PolymorphicDiscriminatorProperty
       }
     end
   end
