Updated ctors to be based on Credentials property

--- a/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/NodeJS/NodeJS/Templates/ServiceClientTemplate.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.Rest.Generator.NodeJS
+@using Microsoft.Rest.Generator.ClientModel
 @using Microsoft.Rest.Generator.NodeJS.Templates
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
@@ -60,7 +61,7 @@ function @(Model.Name)(@(Model.RequiredConstructorParameters), options) {
   @EmptyLine
   if (!options) options = {};
   @EmptyLine
-  @(Model.Name)['super_'].call(this, @(parameters.Any(p => p.Name == "credentials") ? "credentials" : "null"), options);
+  @(Model.Name)['super_'].call(this, @(parameters.Any(p => p.Type == PrimaryType.Credentials) ? "credentials" : "null"), options);
   this.baseUri = baseUri;
   if (!this.baseUri) {
     this.baseUri = '@Model.BaseUrl';
